--- a/sunshinewear/src/main/res/values/dimens.xml
+++ b/sunshinewear/src/main/res/values/dimens.xml
@@ -5,4 +5,11 @@
     <dimen name="digital_x_offset">15dp</dimen>
     <dimen name="digital_x_offset_round">25dp</dimen>
     <dimen name="digital_y_offset">90dp</dimen>
+    <dimen name="digital_y1_offset">20dp</dimen>
+
+    <dimen name="high_temp_text_size">20dp</dimen>
+    <dimen name="low_temp_text_size">20dp</dimen>
+
+    <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_5">5dp</dimen>
 </resources>
